<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Exercice1Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrez_votre_pr_nom_et_valider"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/exercice1_prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ex_jean"
        />
    <Button
        android:id="@+id/exercice1_bouton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/valider"
        />
    <TextView
        android:id="@+id/exercice1_hello"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        />

</LinearLayout>